# WoBS

./: CMakeLists.txt  README.md
Bot_Game_Base/: BotBase.h  BotGameBase.cpp  BotGameBase.h
Bot_Soccer_Game/Bot_Soccer_Game/: Bot_Soccer_Game.1  main.cpp
Bot_Soccer_Game/Bot_Soccer_Game.xcodeproj/: project.pbxproj
SoccerBotFactory/: iBS_BotBase.h  iBS_SoccerBot.h  main.cpp
src/: main.cpp
src/core/: AI.cpp  Bot.cpp  Bot.hpp  Grid.cpp  Grid.hpp  Physics.cpp  Position.cpp  Position.hpp
src/include/wobs/: Ball.hpp  Bot.hpp  Grid.hpp  Physics.hpp  Position.hpp
src/platform/desktop/: main.cpp
